<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ui.home.detail.DetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/image_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/left"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:icon="@drawable/left"
                app:iconSize="30sp"
                app:iconTint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/main_color" />


            <TextView
                android:id="@+id/product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/inter_bold"
                android:maxLines="1"
                android:text="Product Details"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/left"
                app:layout_constraintTop_toTopOf="@+id/left" />


            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                app:iss_no_dots="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/left" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/appCompatRatingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey_C"
            android:progressTint="@color/main_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

        <TextView
            android:id="@+id/rating_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="(4.5)"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatRatingBar"
            app:layout_constraintStart_toEndOf="@+id/appCompatRatingBar"
            app:layout_constraintTop_toTopOf="@+id/appCompatRatingBar" />


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/intro_back"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/product_brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_brand">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decrease"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="2dp"
                app:icon="@drawable/remove"
                app:iconTint="@color/black"
                app:rippleColor="@color/main_color" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:maxLength="3"
                android:paddingHorizontal="10dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/increase"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="2dp"
                app:icon="@drawable/add"
                app:iconTint="@color/black"
                app:rippleColor="@color/main_color" />

        </LinearLayout>


        <TextView
            android:id="@+id/product_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="Dennis Logo"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="@+id/appCompatRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/appCompatRatingBar" />


        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_serif"
            android:text="$250"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/product_brand"
            app:layout_constraintTop_toBottomOf="@+id/product_brand" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_price" />


        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@+id/product_price"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:maxLines="2"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/read"
            android:textColor="@color/main_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/product_desc"
            app:layout_constraintTop_toBottomOf="@+id/product_desc" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider3">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton5"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_A"
                app:icon="@drawable/heart"
                app:iconSize="25sp"
                app:iconTint="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/add_cart"
                android:textSize="18sp"
                android:fontFamily="@font/inter_semibold"
                app:icon="@drawable/cart"
                app:iconSize="25sp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialButton5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>